--- a/.gitmodules
+++ b/.gitmodules
@@ -3,13 +3,13 @@
 	url = https://github.com/Unity-Technologies/Unity.Mathematics.git
 [submodule "libs/Manifold.Core"]
 	path = libs/Manifold.Core
-	url = https://github.com/RaphaelTetreault/Manifold.Core.git
+	url = git@github.com:RaphaelTetreault/GameCube.Core.git
 [submodule "libs/GameCube.GFZ"]
 	path = libs/GameCube.GFZ
-	url = https://github.com/RaphaelTetreault/GameCube.GFZ.git
+	url = git@github.com:RaphaelTetreault/GameCube.GFZ.git
 [submodule "libs/GameCube.Core"]
 	path = libs/GameCube.Core
-	url = https://github.com/RaphaelTetreault/GameCube.Core.git
+	url = git@github.com:RaphaelTetreault/GameCube.Core.git
 [submodule "libs/GameCube.AmusementVision"]
 	path = libs/GameCube.AmusementVision
-	url = https://github.com/RaphaelTetreault/GameCube.AmusementVision.git
+	url = git@github.com:RaphaelTetreault/GameCube.AmusementVision.git
