Improve cardata IO, add LZ compression and decompression

--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -5,11 +5,15 @@
     },
     "Profile 1": {
       "commandName": "Project",
-      "commandLineArgs": "--cardata-bin-to-tsv D:\\gfzj01\\game\\cardata"
+      "commandLineArgs": "--cardata-bin-to-tsv D:\\gfzj01\\game\\cardata.lz"
     },
     "Profile 2": {
       "commandName": "Project",
       "commandLineArgs": "--cardata-tsv-to-bin D:\\gfzj01\\game\\cardata.tsv"
+    },
+    "Profile 3": {
+      "commandName": "Project",
+      "commandLineArgs": "--lzc D:\\gfzj01\\game\\cardata"
     }
   }
 }
