Namespace cleanup, minor code cleanup, temp remove --tpl-pack for release

--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -13,7 +13,7 @@
     },
     "tpl-unpack": {
       "commandName": "Project",
-      "commandLineArgs": "--tpl-unpack D:/gfz-cli-test/gfz --verbose tpl-unpack-mipmaps --searchSubdirs --searchPattern *.tpl --overwrite"
+      "commandLineArgs": "--tpl-unpack D:/gfz-cli-test/gfz --verbose tpl-unpack-mipmaps --search-subdirs --search-pattern *.tpl --overwrite"
     },
     "tpl-pack": {
       "commandName": "Project",
