--- a/src/gfz-cli/gfz-cli.csproj
+++ b/src/gfz-cli/gfz-cli.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>Manifold.GFZCLI</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Version>0.2.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
