--- a/src/gfz-cli/gfz-cli.csproj
+++ b/src/gfz-cli/gfz-cli.csproj
@@ -24,6 +24,7 @@
     <ProjectReference Include="..\..\libs\GameCube.GFZ\src\GameCube.GFZ.Camera\GameCube.GFZ.Camera.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.GFZ\src\GameCube.GFZ.CarData\GameCube.GFZ.CarData.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.GFZ\src\GameCube.GFZ.Cheats\GameCube.GFZ.Cheats.csproj" />
+    <ProjectReference Include="..\..\libs\GameCube.GFZ\src\GameCube.GFZ.Emblem\GameCube.GFZ.Emblem.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.GFZ\src\GameCube.GFZ.FMI\GameCube.GFZ.FMI.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.GFZ\src\GameCube.GFZ.Ghosts\GameCube.GFZ.Ghosts.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.GFZ\src\GameCube.GFZ.GMA\GameCube.GFZ.GMA.csproj" />
