WIP Refactor Program code to use generic write/overwrite check and print to console for action calls

--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -21,7 +21,7 @@
     },
     "lz-decompress": {
       "commandName": "Project",
-      "commandLineArgs": "-a lz-dcompressed -i D:\\gfz-cli-test\\lz-test -o D:\\test-gfz\\maybe\\ --search-subdirs --overwrite"
+      "commandLineArgs": "-a lz-decompress -i D:\\gfz-cli-test\\lz-test -o D:\\test-gfz\\maybe\\ --search-subdirs --overwrite"
     },
     "lz-compress": {
       "commandName": "Project",
