WIP Add CLI image resizing arguments
- Add ability to resize emblem (BIN)
- Reorganize Options - all options are stored in interfaces implemented by Options
- Add some ImageSharp specific types for processing

--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -45,7 +45,7 @@
     },
     "image-to-emblem-bin": {
       "commandName": "Project",
-      "commandLineArgs": "image-to-emblem D:\\desktop\\pkmn D:\\gfz-cli-test\\pkmn.bin -p * -o"
+      "commandLineArgs": "image-to-emblem D:\\desktop\\pkmn C:\\gfzj01-working\\files\\emblem\\sample.bin -p * -o --resize"
     }
   }
 }
