--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -21,23 +21,23 @@
     },
     "lz-decompress": {
       "commandName": "Project",
-      "commandLineArgs": "-a lz-decompress -i D:\\gfzj01\\game\\ -o D:\\test-gfz\\maybe\\ --search-subdirs --overwrite"
+      "commandLineArgs": "lz-decompress D:\\gfzj01\\bg\\ D:\\test-gfz\\maybe\\ --search-subdirs --overwrite"
     },
     "lz-compress": {
       "commandName": "Project",
-      "commandLineArgs": "-a lz-compress -i D:\\gfz-cli-test\\lz-test --search-subdirs --search-pattern *.gma --overwrite"
+      "commandLineArgs": "lz-compress D:\\gfz-cli-test\\lz-test --search-subdirs --search-pattern *.gma --overwrite"
     },
     "live-camera-stage-bin-to-tsv": {
       "commandName": "Project",
-      "commandLineArgs": "-a live-camera-stage-bin-to-tsv -i D:\\gfzj01\\ --search-subdirs --overwrite"
+      "commandLineArgs": "live-camera-stage-bin-to-tsv D:\\gfzj01\\ --search-subdirs --overwrite"
     },
     "live-camera-stage-tsv-to-bin": {
       "commandName": "Project",
-      "commandLineArgs": "-a live-camera-stage-tsv-to-bin -i D:\\gfzj01\\ --search-subdirs --overwrite"
+      "commandLineArgs": "live-camera-stage-tsv-to-bin D:\\gfzj01\\ --search-subdirs --overwrite"
     },
     "emblem-to-image-bin": {
       "commandName": "Project",
-      "commandLineArgs": "-a emblem-to-image -i D:\\gfz-cli-test\\emblem\\chara.bin"
+      "commandLineArgs": "emblem-to-image D:\\gfz-cli-test\\emblem\\chara.bin"
     },
     "image-to-emblem-bin": {
       "commandName": "Project",
