Add preliminary structure to read out files from GameCube ISO

--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -54,6 +54,10 @@
     "WSL": {
       "commandName": "WSL2",
       "distributionName": ""
+    },
+    "extract-iso-files": {
+      "commandName": "Project",
+      "commandLineArgs": "extract-iso-files \"D:\\roms\\gfzj01.iso\""
     }
   }
 }
