--- a/src/gfz-cli/gfz-cli.csproj
+++ b/src/gfz-cli/gfz-cli.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>Manifold.GFZCLI</RootNamespace>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\..\libs\GameCube.AmusementVision\src\GameCube.AmusementVision.LZ\GameCube.AmusementVision.LZ.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.AmusementVision\src\GameCube.AmusementVision\GameCube.AmusementVision.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.Core\src\GameCube.Cheats\GameCube.Cheats.csproj" />
+    <ProjectReference Include="..\..\libs\GameCube.Core\src\GameCube.DiskImage\GameCube.DiskImage.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.Core\src\GameCube.GX.Texture\GameCube.GX.Texture.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.Core\src\GameCube.GX\GameCube.GX.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.GFZ\src\GameCube.GFZ.Camera\GameCube.GFZ.Camera.csproj" />
