WIP implementing ARC file support

--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -58,6 +58,14 @@
     "extract-iso-files": {
       "commandName": "Project",
       "commandLineArgs": "extract-iso-files \"D:\\roms\\gfzj01.iso\" \"D:/tempx\""
+    },
+    "arc-decompress": {
+      "commandName": "Project",
+      "commandLineArgs": "arc-decompress D:\\gfzj01\\ D:\\test-gfz\\maybe\\ --search-subdirs --overwrite --search-pattern \"*.arc\""
+    },
+    "arc-compress": {
+      "commandName": "Project",
+      "commandLineArgs": "arc-compress D:\\test-gfz\\maybe D:\\test-gfz\\maybe\\ --search-subdirs --overwrite --search-pattern \"*\""
     }
   }
 }
