--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -57,7 +57,7 @@
     },
     "extract-iso-files": {
       "commandName": "Project",
-      "commandLineArgs": "extract-iso-files \"D:\\roms\\gfzj01.iso\" \"D:/tempx\" --overwrite"
+      "commandLineArgs": "extract-iso-files \"D:\\roms\\gfzj01.iso\" \"D:/tempx\""
     },
     "arc-decompress": {
       "commandName": "Project",
