Fix minor issues related to public methods from MultiFileUtility (ARC + CarData output file names)

--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -65,7 +65,7 @@
     },
     "arc-compress": {
       "commandName": "Project",
-      "commandLineArgs": "arc-compress D:\\test-gfz\\maybe\\jpeg\\compo\\ D:\\test-gfz\\maybe\\jpeg\\compo\\ --search-subdirs --overwrite --search-pattern \"*\""
+      "commandLineArgs": "arc-compress D:\\test-gfz\\maybe\\jpeg\\compo\\ --search-subdirs --overwrite --search-pattern \"*\""
     }
   }
 }
