--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,7 +22,8 @@ jobs:
         dotnet-version: 7.0.x
     - name: Install dependencies
       run: dotnet add package CommandLineParser --version 2.9.1
-           dotnet add package SixLabors.ImageSharp --version 2.1.3
+    - name: Install dependencies
+      run: dotnet add package SixLabors.ImageSharp --version 2.1.3
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
