--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,8 +20,10 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
+    - name: DEBUG
+      run: ls
     - name: Prepare wrokspace directory
-      run: cd "/home/runner/work/gfz-cli/src/gfz-cli/"
+      run: cd "../src/gfz-cli/"
     - name: Install dependencies
       run: dotnet add package CommandLineParser --version 2.9.1
     - name: Install dependencies
