--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,8 +20,8 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
-    - name: Prepare workspace directory
-      run: cd "./src/gfz-cli/"
+    - working-directory: ./src/gfz-cli/
+      
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
