--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,11 +20,15 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
-    - working-directory: ./src/gfz-cli/
       
     - name: Restore dependencies
       run: dotnet restore
+      working-directory: ./src/gfz-cli/
+      
     - name: Build
       run: dotnet build --no-restore dotnet build
+      working-directory: ./src/gfz-cli/
+      
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      working-directory: ./src/gfz-cli/
