--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,7 @@ jobs:
       working-directory: ./src/gfz-cli/
       
     - name: Build
-      run: dotnet build --no-restore dotnet build
+      run: dotnet build --no-restore
       working-directory: ./src/gfz-cli/
       
     - name: Test
