--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,10 +43,10 @@ jobs:
       # -r: Runtime
       # --nologo: Doesn't display the startup banner or the copyright message.
       run: |
-        dotnet publish gfz-cli.csproj  -c Debug  -o cibuild/linux-x64 -r linux-x64
-        dotnet publish gfz-cli.csproj  -c Debug  -o cibuild/osx-x64   -r osx-x64
-        dotnet publish gfz-cli.csproj  -c Debug  -o cibuild/win-x64   -r win-x64
-        dotnet publish gfz-cli.csproj  -c Debug  -o cibuild/win-x86   -r win-x86
+        dotnet publish gfz-cli.csproj  -c Debug  -o cibuild/linux-x64 -r linux-x64 --self-contained
+        dotnet publish gfz-cli.csproj  -c Debug  -o cibuild/osx-x64   -r osx-x64   --self-contained
+        dotnet publish gfz-cli.csproj  -c Debug  -o cibuild/win-x64   -r win-x64   --self-contained
+        dotnet publish gfz-cli.csproj  -c Debug  -o cibuild/win-x86   -r win-x86   --self-contained
       working-directory: ./src/gfz-cli/
       
     - name: Upload Build Artifact
