--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -53,4 +53,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: gfz-cli
-        path: ./src/gfz-cli/ci-build/
+        path: ./src/gfz-cli/cibuild/
