--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignore build.bat files
 [Bb]uild
 [Bb]uilds
+#Local files can be placed here
+[Ll]ocal
 
 ##############################################################################################
 
