--- a/src/gfz-cli/gfz-cli.csproj
+++ b/src/gfz-cli/gfz-cli.csproj
@@ -20,7 +20,9 @@
     <ProjectReference Include="..\..\libs\GameCube.AmusementVision\src\GameCube.AmusementVision.LZ\GameCube.AmusementVision.LZ.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.AmusementVision\src\GameCube.AmusementVision\GameCube.AmusementVision.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.Core\src\GameCube.Cheats\GameCube.Cheats.csproj" />
+    <ProjectReference Include="..\..\libs\GameCube.Core\src\GameCube.Common\GameCube.Common.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.Core\src\GameCube.DiskImage\GameCube.DiskImage.csproj" />
+    <ProjectReference Include="..\..\libs\GameCube.Core\src\GameCube.GCI\GameCube.GCI.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.Core\src\GameCube.GX.Texture\GameCube.GX.Texture.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.Core\src\GameCube.GX\GameCube.GX.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.GFZ\src\GameCube.GFZ.Camera\GameCube.GFZ.Camera.csproj" />
@@ -32,6 +34,7 @@
     <ProjectReference Include="..\..\libs\GameCube.GFZ\src\GameCube.GFZ.GMA\GameCube.GFZ.GMA.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.GFZ\src\GameCube.GFZ.LZ\GameCube.GFZ.LZ.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.GFZ\src\GameCube.GFZ.REL\GameCube.GFZ.REL.csproj" />
+    <ProjectReference Include="..\..\libs\GameCube.GFZ\src\GameCube.GFZ.Replay\GameCube.GFZ.Replay.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.GFZ\src\GameCube.GFZ.Stage\GameCube.GFZ.Stage.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.GFZ\src\GameCube.GFZ.TPL\GameCube.GFZ.TPL.csproj" />
     <ProjectReference Include="..\..\libs\GameCube.GFZ\src\GameCube.GFZ\GameCube.GFZ.csproj" />
