--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -70,6 +70,10 @@
     "gci": {
       "commandName": "Project",
       "commandLineArgs": "auto-rename-gci D:\\test-gfz\\ --search-subdirs --search-pattern \"*.gci\""
+    },
+    "dump-hex-32": {
+      "commandName": "Project",
+      "commandLineArgs": "read-ghost D:\\gfzj01\\staff_ghost\\ --search-subdirs --search-pattern \"ghost1.dat\" --overwrite"
     }
   }
 }
