--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -75,6 +75,10 @@
     "gci-extract-ghost": {
       "commandName": "Project",
       "commandLineArgs": "gci-extract-ghost D:\\gfzj01\\staff_ghost\\ --search-subdirs --search-pattern \"8P-GFZE-fzg003c3d1b98814015.dat.gci"
+    },
+    "rel": {
+      "commandName": "Project",
+      "commandLineArgs": "rel-encrypt-line__ D:\\gfzj01\\ -s"
     }
   }
 }
