Add decrypt line__.bin and encrypt line__.rel

--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -78,7 +78,7 @@
     },
     "rel": {
       "commandName": "Project",
-      "commandLineArgs": "rel-encrypt-line__ D:\\gfzj01\\ -s"
+      "commandLineArgs": "rel-encrypt-line__ D:\\gfzj01\\ -s -o"
     }
   }
 }
