WIP implementation of LineREL patching working
TODO
Add specific values to patch, args for each
Use generic IBinarySerializable to pass all parameters through one main function

--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -79,6 +79,10 @@
     "rel": {
       "commandName": "Project",
       "commandLineArgs": "rel-encrypt-line__ D:\\gfzj01\\ -s -o"
+    },
+    "rel-patch": {
+      "commandName": "Project",
+      "commandLineArgs": "linerel-patch D:\\gfzj01\\ -s"
     }
   }
 }
