--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -76,13 +76,13 @@
       "commandName": "Project",
       "commandLineArgs": "gci-extract-ghost D:\\gfzj01\\staff_ghost\\ --search-subdirs --search-pattern \"8P-GFZE-fzg003c3d1b98814015.dat.gci"
     },
-    "rel": {
-      "commandName": "Project",
-      "commandLineArgs": "rel-encrypt-line__ D:\\gfzj01\\ -s -o"
-    },
     "rel-patch": {
       "commandName": "Project",
-      "commandLineArgs": "linerel-patch D:\\gfzj01\\ -s"
+      "commandLineArgs": "linerel-bgm-both D:\\gfzj01\\ -s --stage 1 --bgm 38 --bgmfl 15"
+    },
+    "rel-encrypt": {
+      "commandName": "Project",
+      "commandLineArgs": "linerel-encrypt D:\\gfzj01\\ -s -o"
     }
   }
 }
