m: Sync with updates to FMI

--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -86,7 +86,7 @@
     },
     "fmi-to-json": {
       "commandName": "Project",
-      "commandLineArgs": "fmi-to-json D:\\gfzj01\\ -s"
+      "commandLineArgs": "fmi-to-json D:\\gfzj01\\ -s -o"
     }
   }
 }
