m: Update REL library, correct some asserts in course name string patching

--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -78,7 +78,7 @@
     },
     "rel-patch": {
       "commandName": "Project",
-      "commandLineArgs": "linerel-name-stage D:\\gfzj01\\ -s --stage 1 --value \"Twister Roader\""
+      "commandLineArgs": "linerel-name-stage D:\\gfzj01\\ -s --stage 1 --value \"Twist Road \\u2605\""
     },
     "rel-encrypt": {
       "commandName": "Project",
