--- a/src/gfz-cli/Properties/launchSettings.json
+++ b/src/gfz-cli/Properties/launchSettings.json
@@ -2,7 +2,8 @@
   "profiles": {
     "gfz-cli": {
       "commandName": "Project",
-      "commandLineArgs": "lz-decompress D:\\gfzj01\\bg\\ D:\\test-gfz\\maybe\\ --search-subdirs --overwrite"
+      "commandLineArgs": "linerel-set-cardata line__.rel --use-file cardata",
+      "workingDirectory": "D:\\github\\gfz-cli\\src\\gfz-cli\\bin\\Debug\\net7.0\\test-cardata"
     },
     "cardata-bin-to-tsv": {
       "commandName": "Project",
