Add ability to patch vehicle letter ratings

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 [Bb]uilds
 #Local files can be placed here
 [Ll]ocal
+[Tt]est
+[Tt]ests
 
 ##############################################################################################
 
